heritage-k8s-helm-charts/external-access/ingress-nginx-tcp-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-tcp
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 31432
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 31379
