heritage-k8s-helm-charts/external-access/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heritage-vault
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    # Uses nip.io for convenience. Change the host to your own DNS if needed.
    - host: vault.52.20.233.48.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heritage-vault-ui
                port:
                  number: 8200
